force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/tc9_edc__Setup_Work_Schedule__mdt.object-meta.xml
<CustomObject>
    <label>Setup Work Schedule</label>
    <pluralLabel>Setup Work Schedules</pluralLabel>
</CustomObject>