force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Auto_Create_Shift_Allocations__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Create_Shift_Allocations__c</fullName>
    <label>Auto Create Shift Allocations</label>
    <length>80</length>
    <type>Text</type>
</CustomField>