force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__External_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__External_ID__c</fullName>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>