force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Work_Schedule_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule_Generation_Status__c</fullName>
    <label>Work Schedule Generation Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>