force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Work_Schedule_Minutes__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule_Minutes__c</fullName>
    <label>Work Schedule Minutes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>