force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Work_Schedule_Paid_Breaks__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule_Paid_Breaks__c</fullName>
    <label>Work Schedule Paid Breaks</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>