force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Work_Schedule_Published_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule_Published_From__c</fullName>
    <label>Work Schedule Published From</label>
    <type>Date</type>
</CustomField>