force-app/main/default/objects/tc9_edc__Setup_Work_Schedule__mdt/fields/tc9_edc__Work_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule_Start_Date__c</fullName>
    <label>Work Schedule Start Date</label>
    <type>Date</type>
</CustomField>